src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ar.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 7,
  "body": [
    {
      "type": "ExpressionStatement",
      "type": "ExpressionStatement",
      "start": 0,
      "end": 7,
      "expression": {
        "type": "BinaryExpression",
        "start": 0,
        "end": 7,
        "operator": "+",
        "left": {
          "type": "Literal",
          "start": 0,
          "end": 1,
          "value": 5,
          "raw": "5"
        },
        "right": {
          "type": "Literal",
          "start": 4,
          "end": 7,
          "value": "a",
          "raw": "\"a\""
        }
      }
    }
  ]
}
