src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__av.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 49,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 49,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 3,
          "end": 49,
          "id": {
            "type": "Identifier",
            "start": 3,
            "end": 4,
            "name": "f",
            "digest": null
          },
          "init": {
            "type": "FunctionExpression",
            "type": "FunctionExpression",
            "start": 7,
            "end": 49,
            "params": [
              {
                "type": "Parameter",
                "identifier": {
                  "type": "Identifier",
                  "start": 8,
                  "end": 13,
                  "name": "angle",
                  "digest": null
                },
                "optional": true,
                "digest": null
              }
            ],
            "body": {
              "start": 19,
              "end": 49,
              "body": [
                {
                  "type": "ReturnStatement",
                  "type": "ReturnStatement",
                  "start": 21,
                  "end": 47,
                  "argument": {
                    "type": "CallExpression",
                    "type": "CallExpression",
                    "start": 28,
                    "end": 47,
                    "callee": {
                      "type": "Identifier",
                      "start": 28,
                      "end": 35,
                      "name": "default",
                      "digest": null
                    },
                    "arguments": [
                      {
                        "type": "Identifier",
                        "type": "Identifier",
                        "start": 36,
                        "end": 41,
                        "name": "angle",
                        "digest": null
                      },
                      {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 43,
                        "end": 46,
                        "value": 360,
                        "raw": "360",
                        "digest": null
                      }
                    ],
                    "optional": false,
                    "digest": null
                  },
                  "digest": null
                }
              ],
              "nonCodeMeta": {
                "nonCodeNodes": {},
                "start": [],
                "digest": null
              },
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "fn",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
