src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ax.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 91,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 0,
      "end": 91,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 4,
          "end": 91,
          "id": {
            "type": "Identifier",
            "start": 4,
            "end": 11,
            "name": "numbers"
          },
          "init": {
            "type": "ArrayExpression",
            "type": "ArrayExpression",
            "start": 14,
            "end": 91,
            "elements": [
              {
                "type": "Literal",
                "type": "Literal",
                "start": 28,
                "end": 29,
                "value": 1,
                "raw": "1"
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 43,
                "end": 44,
                "value": 2,
                "raw": "2"
              }
            ],
            "nonCodeMeta": {
              "nonCodeNodes": {
                "2": [
                  {
                    "type": "NonCodeNode",
                    "start": 58,
                    "end": 63,
                    "value": {
                      "type": "blockComment",
                      "value": "A,",
                      "style": "line"
                    }
                  }
                ],
                "3": [
                  {
                    "type": "NonCodeNode",
                    "start": 76,
                    "end": 81,
                    "value": {
                      "type": "blockComment",
                      "value": "B,",
                      "style": "line"
                    }
                  }
                ]
              },
              "start": []
            }
          }
        }
      ],
      "kind": "const"
    }
  ]
}
