src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__az.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 79,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 79,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 4,
          "end": 79,
          "id": {
            "type": "Identifier",
            "start": 4,
            "end": 9,
            "name": "props",
            "digest": null
          },
          "init": {
            "type": "ObjectExpression",
            "type": "ObjectExpression",
            "start": 12,
            "end": 79,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 26,
                "end": 30,
                "key": {
                  "type": "Identifier",
                  "start": 26,
                  "end": 27,
                  "name": "a",
                  "digest": null
                },
                "value": {
                  "type": "Literal",
                  "type": "Literal",
                  "start": 29,
                  "end": 30,
                  "value": 1,
                  "raw": "1",
                  "digest": null
                },
                "digest": null
              },
              {
                "type": "ObjectProperty",
                "start": 65,
                "end": 69,
                "key": {
                  "type": "Identifier",
                  "start": 65,
                  "end": 66,
                  "name": "c",
                  "digest": null
                },
                "value": {
                  "type": "Literal",
                  "type": "Literal",
                  "start": 68,
                  "end": 69,
                  "value": 3,
                  "raw": "3",
                  "digest": null
                },
                "digest": null
              }
            ],
            "nonCodeMeta": {
              "nonCodeNodes": {
                "1": [
                  {
                    "type": "NonCodeNode",
                    "start": 44,
                    "end": 52,
                    "value": {
                      "type": "blockComment",
                      "value": "b: 2,",
                      "style": "line"
                    },
                    "digest": null
                  }
                ]
              },
              "start": [],
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
