src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ba.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 133,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 1,
      "end": 132,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 7,
          "end": 132,
          "id": {
            "type": "Identifier",
            "start": 7,
            "end": 16,
            "name": "sketch001"
          },
          "init": {
            "type": "PipeExpression",
            "type": "PipeExpression",
            "start": 19,
            "end": 132,
            "body": [
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 19,
                "end": 38,
                "callee": {
                  "type": "Identifier",
                  "start": 19,
                  "end": 32,
                  "name": "startSketchOn"
                },
                "arguments": [
                  {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 33,
                    "end": 37,
                    "value": "XY",
                    "raw": "'XY'"
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 115,
                "end": 132,
                "callee": {
                  "type": "Identifier",
                  "start": 115,
                  "end": 129,
                  "name": "startProfileAt"
                },
                "arguments": [
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 130,
                    "end": 131
                  }
                ],
                "optional": false
              }
            ],
            "nonCodeMeta": {
              "nonCodeNodes": {
                "0": [
                  {
                    "type": "NonCodeNode",
                    "start": 41,
                    "end": 52,
                    "value": {
                      "type": "blockComment",
                      "value": "|> arc({",
                      "style": "line"
                    }
                  },
                  {
                    "type": "NonCodeNode",
                    "start": 55,
                    "end": 74,
                    "value": {
                      "type": "blockComment",
                      "value": "angleEnd: 270,",
                      "style": "line"
                    }
                  },
                  {
                    "type": "NonCodeNode",
                    "start": 77,
                    "end": 98,
                    "value": {
                      "type": "blockComment",
                      "value": "angleStart: 450,",
                      "style": "line"
                    }
                  },
                  {
                    "type": "NonCodeNode",
                    "start": 101,
                    "end": 109,
                    "value": {
                      "type": "blockComment",
                      "value": "}, %)",
                      "style": "line"
                    }
                  }
                ]
              },
              "start": []
            }
          }
        }
      ],
      "kind": "const"
    }
  ]
}
